sample/retrieveUnpackaged/objects/WaterMAP__c.object
<CustomObject>
    <fields>
        <fullName>ANZSIC_Benchmark_Indicator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ANZSIC Benchmark Indicator</label>
        <referenceTo>ANZSIC_Benchmark_Indicator__c</referenceTo>
        <relationshipLabel>WaterMAPs</relationshipLabel>
        <relationshipName>WaterMAPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ANZSIC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ANZSIC</label>
        <referenceTo>Anzic_Code__c</referenceTo>
        <relationshipLabel>WaterMAPs</relationshipLabel>
        <relationshipName>Watermap</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>About_Your_Site__c</fullName>
        <label>About Your Site</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Anzic_Description_for_customer_plan__c</fullName>
        <formula>ANZSIC__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anzic Description for customer plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorised_By_Email__c</fullName>
        <label>Authorised By: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Authorised_By_Name__c</fullName>
        <label>Authorised By: Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorised_By_Organisation__c</fullName>
        <label>Authorised By: Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorised_By_Phone__c</fullName>
        <label>Authorised By: Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authorised_By_Title__c</fullName>
        <label>Authorised By: Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Billing Account Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>WaterMAPs</relationshipLabel>
        <relationshipName>Watermap</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_of_Active_Submissions__c</fullName>
        <description>&lt;&gt; Cancelled and &lt;&gt; Completed</description>
        <label>Count of Active Submissions</label>
        <summaryFilterItems>
            <field>WaterMAP_Submission__c.Active__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryForeignKey>WaterMAP_Submission__c.Watermap__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>Customer__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>Customer__r.Customer_Number2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>The customer who is actually responsible for paying usage charges to SEW</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WaterMAPs</relationshipLabel>
        <relationshipName>WaterMaps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EREP_for_customer_plan__c</fullName>
        <formula>IF(  Customer__r.Is_EREP__c  ,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EREP for customer plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efficiency_Change_Comments__c</fullName>
        <label>Comment on changes in efficiency</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Equipment_Infrastructure_Processes__c</fullName>
        <label>Equipment, Infrastructure and Processes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Forecast_Sewage_Disposal_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecast Sewage Disposal Cost (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_Trade_Waste_Cost_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecast Trade Waste Cost (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_Water_Cost_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecast Water Cost (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_Water_Use_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecast Water Use KL (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Im_The_Customer_Owner__c</fullName>
        <formula>IF( Customer__r.OwnerId == $User.Id, &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Im The Customer Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <inlineHelpText>Key Customer Manager&apos;s comment on Action Items for KCP.</inlineHelpText>
        <label>Internal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KBAI_Description__c</fullName>
        <label>KBAI Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KBAI_Type__c</fullName>
        <label>KBAI Type</label>
        <picklist>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_Term_Conservation_Target__c</fullName>
        <label>Long Term (3-5 Years) Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <formula>Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organisation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_industry_body__c</fullName>
        <label>Member of peak industry bodies</label>
        <picklist>
            <picklistValues>
                <fullName>Aged &amp; Community Care Victoria (ACCV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aquatics Recreation Victoria (ARV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assoc of Independent Schools (AISV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aust Inst of Surface Finishing (AISF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aust Chicken Meat Federation (ACMF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aust Golf Course Super Assoc (AGCSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aust Hotels Association (AHA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aust Industry Group (AIG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aust Inst Refrig Aircond &amp; Heat (AIRAH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aust Inst of Hotel Engineers (AIHE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aust Meat Industry Council (AMIC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSVEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Owners Mgrs Assoc Aust (BOMA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement Concrete &amp; Aggregates Aust (CCAA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubs Victoria (ClubsVIC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Managers Association (FMA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care Australia (HCA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursery &amp; Garden Ind Vic (NGIV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastics &amp; Chemicals Ind Assoc (PACIA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primesafe Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vic Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victorian Caravan Parks Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victorian Chicken Meat Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vic Employ Chamb Commerce &amp; Ind (VECCI)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>People_and_Culture__c</fullName>
        <label>People and Culture</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Mailing_Name__c</fullName>
        <label>Postal Mailing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Name__c</fullName>
        <label>Postal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_State__c</fullName>
        <label>Postal State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Street__c</fullName>
        <label>Postal Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Suburb__c</fullName>
        <label>Postal Suburb</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Postal_Contact_Type__c</fullName>
        <label>Preferred Postal Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prepared_By_Email__c</fullName>
        <label>Prepared By: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Prepared_By_Name__c</fullName>
        <label>Prepared By: Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_By_Organisation__c</fullName>
        <label>Prepared By: Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_By_Phone__c</fullName>
        <label>Prepared By: Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prepared_By_Title__c</fullName>
        <label>Prepared By: Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Mobile__c</fullName>
        <label>Primary Contact: Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <label>Primary Contact: Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Organisation__c</fullName>
        <label>Primary Contact: Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <label>Primary Contact: Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Title__c</fullName>
        <label>Primary Contact: Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Watermap2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Yr_Fcst_Sewage_Disposal_Cost_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Yr Fcst Sewage Disposal Cost (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prior_Yr_Fcst_Trade_Waste_Cost_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Yr Fcst Trade Waste Cost (%)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prior_Yr_Fcst_Water_Cost_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Yr Fcst Water Cost (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prior_Yr_Fcst_Water_Use_KL_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Yr Fcst Water Use KL (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Property_Id__c</fullName>
        <formula>Billing_Account__r.Property__r.CIS_Property_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Sent_Date__c</fullName>
        <label>Registration Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Sent_Datetime__c</fullName>
        <label>Registration Sent Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Report_Data_Drainage_Charge__c</fullName>
        <label>Report Data Drainage Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Data_Parks_Charge__c</fullName>
        <label>Report Data Parks Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Data_Recycled_Water_Cost__c</fullName>
        <label>Report Data Recycled Water Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Data_Recycled_Water_Volume__c</fullName>
        <label>Report Data Recycled Water Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Data_Sewage_Cost__c</fullName>
        <label>Report Data Sewage Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Data_Sewage_Volume__c</fullName>
        <label>Report Data Sewage Disposal Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Data_Trade_Waste_Cost__c</fullName>
        <label>Report Data Trade Waste Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Data_Trade_Waste_Volume__c</fullName>
        <label>Report Data Trade Waste Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Data_Water_Cost__c</fullName>
        <label>Report Data Water Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Data_Water_Volume__c</fullName>
        <label>Report Data Water Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Data_Year__c</fullName>
        <label>Report Data Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Email__c</fullName>
        <label>Secondary Contact: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Mobile__c</fullName>
        <label>Secondary Contact: Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Name__c</fullName>
        <label>Secondary Contact: Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Organisation__c</fullName>
        <label>Secondary Contact: Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Phone__c</fullName>
        <label>Secondary Contact: Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Title__c</fullName>
        <label>Secondary Contact: Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Watermap3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Term_Conservation_Target__c</fullName>
        <label>Short Term (1-2 Years) Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <formula>Billing_Account__r.Property_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Manager_Email__c</fullName>
        <label>Site Manager: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Site_Manager_Mobile__c</fullName>
        <label>Site Manager: Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site_Manager_Name__c</fullName>
        <label>Site Manager: Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Manager_Organisation__c</fullName>
        <label>Site Manager: Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Manager_Phone__c</fullName>
        <label>Site Manager: Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site_Manager_Title__c</fullName>
        <label>Site Manager: Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Watermap1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Organisation_Name__c</fullName>
        <description>The name of the organisation operating on this site</description>
        <label>Site Organisation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014/15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013/14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012/13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011/12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010/11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008/09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007/08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006/07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005/06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004/05</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Members__c</fullName>
        <label>Insert team members (name and position)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Universal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Universal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Water_Use_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Water_Use_Influencing_Factors__c</fullName>
        <label>Influencing Factors</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Water_Use_Outlook__c</fullName>
        <label>Outlook description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <label>WaterMAP</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Site_Address__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active WaterMAPs</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_WaterMAPs</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Site_Address__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive WaterMAPs</label>
    </listViews>
    <listViews>
        <fullName>All_WaterMAPs</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Site_Address__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All WaterMAPs</label>
    </listViews>
    <listViews>
        <fullName>Awaiting_Registration</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Site_Address__c</columns>
        <columns>Registration_Sent_Datetime__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Registration</value>
        </filters>
        <label>All WaterMAPs Awaiting Registration</label>
    </listViews>
    <listViews>
        <fullName>My_WaterMAPs</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Site_Address__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Im_The_Customer_Owner__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <label>My WaterMAPs</label>
    </listViews>
    <listViews>
        <fullName>New</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Site_Address__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All New WaterMAPs</label>
    </listViews>
    <nameField>
        <label>Water MAP #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WaterMAPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>